# PROI---project

./: .gitignore  .gitlab-ci.yml  README.md
Sheepskin/: CMakeLists.txt  default.profraw  test.csv
Sheepskin/ConsoleApp/: CMakeLists.txt  main.cpp
Sheepskin/ConsoleApp/Data/CSVReader/: CSVReader.cpp  CSVReader.h
Sheepskin/ConsoleApp/Data/CSVReader/CSVReader/: CSVReader.cpp  CSVReader.h
Sheepskin/ConsoleApp/Data/CSVReader/CSVResult/: CSVResult.cpp  CSVResult.h
Sheepskin/ConsoleApp/Data/CSVReader/Mapper/: Mapper.cpp  Mapper.h
Sheepskin/ConsoleApp/Data/CSVWriter/: CSVWriter.cpp  CSVWriter.h
Sheepskin/ConsoleApp/Data/Data/: Data.cpp  Data.h
Sheepskin/ConsoleApp/Data/Instrument/: Instrument.h
Sheepskin/ConsoleApp/InstrumentDecisionEvaluation/: InstrumentDecisionEvaluation.cpp  InstrumentDecisionEvaluation.h
Sheepskin/ConsoleApp/Orchestrator/: Orchestrator.cpp  Orchestrator.h
Sheepskin/ConsoleApp/OutputParser/: OutputParser.cpp  OutputParser.h
Sheepskin/ConsoleApp/Strategies/FirstStrategy/: FirstStrategy.h
Sheepskin/ConsoleApp/Strategies/SecondStrategy/: SecondStrategy.h
Sheepskin/ConsoleApp/Strategies/Strategy/: Strategy.cpp  Strategy.h
Sheepskin/ConsoleApp/Strategies/StrategyResult/: StrategyResult.cpp  StrategyResult.h
Sheepskin/Data/: example.csv  midterm.csv  shortterm.csv
Sheepskin/Results/: example.csv
Sheepskin/Tests/: CMakeLists.txt  CSVTests.cpp  ContextTests.cpp  CryptoCurrencyTest.cpp  ETFTest.cpp  EvaluatorTests.cpp  ExampleTests.cpp  ExceptionHandlerTest.cpp  FirstStrategyTest.cpp  ForecastTests.cpp  InstrumentTests.cpp  OrchestratorTests.cpp  ReverseMapperTests.cpp  SecondStrategyTest.cpp  SecondStrategyTests.cpp  StockTest.cpp  StrategyTests.cpp  ValidatorTests.cpp  test.csv
Sheepskin/Tests/CSVFiles/: test1.csv  test2.csv
